@@ -8,10 +8,10 @@ void chat_msg(char *, char *, char *);
 void system_shout(const char *, ...);
 void chat_init(void);
 void chat_cleanuser(pid_t);
-char *chat_connect(char *);
-char *chat_close(char *);
-char *chat_put(char *);
-char *chat_get(char *);
-char *chat_checksysop(char *);
+void chat_connect_r(char *, char *);
+void chat_close_r(char *, char *);
+void chat_put_r(char *, char *);
+void chat_get_r(char *, char *);
+void chat_checksysop_r(char *, char *);
 
 #endif
